# MyMatrix

./: .gitignore  CMakeLists.txt  main.c
lexicon/: lexicon.c  lexicon.h
matrix/: functions.c  functions.h  initMtx.c  initMtx.h  manipulation.c  manipulation.h  matrix.c  matrix.h  mtx_core.c  mtx_core.h  mtx_manipulation.c  mtx_manipulation.h  mtx_ops.c  mtx_ops.h  mtx_tasks.c  mtx_tasks.h  operations.c  operations.h  tasks.c  tasks.h
